@startuml
skinparam classAttributeIconSize 0
title RotaClara — Classes da implementação
class BaseHTTPRequestHandler
class RequestHandler {
 +handle_request(method)
 +send_response_data(response)
}
class Application {
 +dispatch(method, path, query, data, cookie_header, client)
}
class Endpoint {
 +match(method, path)
 +handler
 +requires_authentication
}
class Request
class Response
class RouteController {
 +create(request)
 +start(request, route_id)
 +record_visit(request, point_id)
 +correct_point(request, point_id)
}
class AuthenticationController
class TeamController
class ParameterController
class ReportController
class AuditController
class Database {
 +transaction(write)
}
class RouteService {
 +create(user, data)
 +start(user, route_id)
 +record_visit(user, point_id, action)
 +correct_point(user, point_id, data)
 +recalculate(route_id)
}
class TeamService
class ParameterService
class ReportService
class AuthenticationService
class RouteRepository
class TeamRepository
class ParameterRepository
class ReportRepository
class AccountRepository
class AuditRepository
class SystemClock
class "domain.py" as Domain <<funções puras>>
BaseHTTPRequestHandler <|-- RequestHandler
RequestHandler --> Application
Application --> Database : delimita transação
RouteController --> RouteService
TeamController --> TeamService
ParameterController --> ParameterService
ReportController --> ReportService
Application ..> AuthenticationService : autentica sessão
Application ..> Endpoint : resolve e executa
Application ..> Request
Application ..> Response
Endpoint ..> RouteController : handler
AuthenticationController --> AuthenticationService
AuditController --> AuditRepository
RouteService --> RouteRepository
RouteService --> TeamRepository
RouteService --> ParameterRepository
RouteService --> AuditRepository
RouteService --> SystemClock
RouteService ..> Domain
TeamService --> TeamRepository
TeamService --> AccountRepository
ParameterService --> ParameterRepository
ParameterService --> AuditRepository
ReportService --> ReportRepository
AuthenticationService --> AccountRepository
note bottom of Database
  Uma conexão por operação.
  Commit ou rollback e fechamento.
  Repositórios compartilham a conexão.
end note
note bottom of Application
  dependencies.py monta serviços e controladores.
  endpoints.py declara métodos e caminhos.
  Uma classe de implementação por arquivo.
end note
@enduml
